tests/compile_errors/borrow_stored.rk
// SPDX-License-Identifier: (MIT OR Apache-2.0)
// Compile Error: Cannot store a borrow in a struct
// ERROR: borrow cannot escape scope
//
// References (string slices, struct field borrows) are block-scoped only.
// They cannot be stored in structs or returned from functions (S3, B3).
//
// Note: `string` is owned and Copy — storing it in a struct is fine.
// String *slices* (`s[0..5]`) are temporary borrows and cannot be stored.

// COMPILE ERROR: storing a string slice in a struct
struct Parser {
    input: string[..]    // ERROR: cannot store a borrow in a struct
    position: usize
}

// Why this is an error:
//
//   func make_parser(s: string) -> Parser {
//       Parser { input: s[0..5], position: 0 }  // slice is temporary
//   }
//   const p = make_parser("hello world")
//   p.input  // Use-after-free: the borrow has no owner
//
// Rask prevents this by making borrows block-scoped (S3).

// Also an error: storing a slice result without converting to owned
func bad_parse(line: string) -> string {
    const key = line[0..5]     // OK: block-scoped slice
    return key                 // ERROR: cannot return a borrow (S3)
}

// THE FIX: Use owned data

// Option 1: Store owned string
struct ParserOwned {
    input: string       // string is owned and Copy — perfectly fine
    position: usize
}

// Option 2: Convert slices to owned before storing/returning
func good_parse(line: string) -> string {
    const key = line[0..5].to_string()    // convert to owned string
    return key                             // OK: owned value
}

// Option 3: Use block-scoped borrows locally, convert at boundaries
func parse_header(line: string) -> Option<(string, string)> {
    const colon = try line.find(':')
    const key = line[0..colon].trim().to_string()        // borrow -> owned
    const value = line[colon+1..].trim().to_string()     // borrow -> owned
    return Some((key, value))
}

func main() {}
